dataset1235/2025-2/805158916/users/1651421245/executions/1584167357_593159971.log
== SUBMISSION (2025-08-27 15:17:32)
-- CODE: 
nota1 = float(input("digite o numero"))
nota2 = float(input("digite o numero"))
nota3 = float(input("digite o numero"))
n1 = nota1*1
n2 = nota2*2
n3 = nota3*3
media = (n1 + n2 + n3) / 6
print(round(media))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
---- user output:
digite o numerodigite o numerodigite o numero6
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
---- user output:
digite o numerodigite o numerodigite o numero8
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
---- user output:
digite o numerodigite o numerodigite o numero6
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
---- user output:
digite o numerodigite o numerodigite o numero2
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
---- user output:
digite o numerodigite o numerodigite o numero9
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
---- user output:
digite o numerodigite o numerodigite o numero3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 15:17:23)
-- CODE: 
nota1 = float(input("digite o numero"))
nota2 = float(input("digite o numero"))
nota3 = float(input("digite o numero"))
n1 = nota1*1
n2 = nota2*2
n3 = nota3*3
media = (n1 + n2 + n3) / 6
print(round(media))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
---- user output:
digite o numerodigite o numerodigite o numero6
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
---- user output:
digite o numerodigite o numerodigite o numero8
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
---- user output:
digite o numerodigite o numerodigite o numero6
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
---- user output:
digite o numerodigite o numerodigite o numero2
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
---- user output:
digite o numerodigite o numerodigite o numero9
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
---- user output:
digite o numerodigite o numerodigite o numero3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 15:03:29)
-- CODE: 
nota1 = float(input("digite o numero"))
nota2 = float(input("digite o numero"))
nota3 = float(input("digite o numero"))
n1 = nota1
n2 = nota2
n3 = nota3

media = n1 + n2 + n3 / 6
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
---- user output:
digite o numerodigite o numerodigite o numero12.683333333333334
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
---- user output:
digite o numerodigite o numerodigite o numero18.816666666666666
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
---- user output:
digite o numerodigite o numerodigite o numero11.083333333333334
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
---- user output:
digite o numerodigite o numerodigite o numero3.5
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
---- user output:
digite o numerodigite o numerodigite o numero19.716666666666665
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
---- user output:
digite o numerodigite o numerodigite o numero5.666666666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 15:12:18)
-- CODE: 
nota1 = float(input("digite o numero"))
nota2 = float(input("digite o numero"))
nota3 = float(input("digite o numero"))
n1 = nota1*1
n2 = nota2*2
n3 = nota3*3
media = (n1 + n2 + n3) / 6
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
---- user output:
digite o numerodigite o numerodigite o numero6.5
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
---- user output:
digite o numerodigite o numerodigite o numero8.1
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
---- user output:
digite o numerodigite o numerodigite o numero5.833333333333333
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
---- user output:
digite o numerodigite o numerodigite o numero2.3333333333333335
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
---- user output:
digite o numerodigite o numerodigite o numero8.95
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
---- user output:
digite o numerodigite o numerodigite o numero3.3333333333333335
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:12:15)
-- CODE: 
nota1 = float(input("digite o numero"))
nota2 = float(input("digite o numero"))
nota3 = float(input("digite o numero"))
n1 = nota1*1
n2 = nota2*2
n3 = nota3*3
media = (n1 + n2 + n3) / 6
print(media)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
---- user output:
digite o numerodigite o numerodigite o numero6.5
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
---- user output:
digite o numerodigite o numerodigite o numero8.1
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
---- user output:
digite o numerodigite o numerodigite o numero5.833333333333333
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
---- user output:
digite o numerodigite o numerodigite o numero2.3333333333333335
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
---- user output:
digite o numerodigite o numerodigite o numero8.95
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
---- user output:
digite o numerodigite o numerodigite o numero3.3333333333333335
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:20:25)
-- CODE: 
nota1 = float(input("digite o numero"))
nota2 = float(input("digite o numero"))
nota3 = float(input("digite o numero"))

media = (nota1 + nota2 + nota3) / 3
print(round(media,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
---- user output:
digite o numerodigite o numerodigite o numero6.2
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
---- user output:
digite o numerodigite o numerodigite o numero8.3
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
---- user output:
digite o numerodigite o numerodigite o numero5.5
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
---- user output:
digite o numerodigite o numerodigite o numero2.0
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
---- user output:
digite o numerodigite o numerodigite o numero9.1
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
---- user output:
digite o numerodigite o numerodigite o numero3.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 15:19:33)
-- CODE: 
nota1 = float(input("digite o numero"))
nota2 = float(input("digite o numero"))
nota3 = float(input("digite o numero"))
n1 = nota1*1
n2 = nota2*2
n3 = nota3*3
media = (n1 + n2 + n3) / 3
print(round(media,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
---- user output:
digite o numerodigite o numerodigite o numero13.0
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
---- user output:
digite o numerodigite o numerodigite o numero16.2
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
---- user output:
digite o numerodigite o numerodigite o numero11.67
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
---- user output:
digite o numerodigite o numerodigite o numero4.67
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
---- user output:
digite o numerodigite o numerodigite o numero17.9
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
---- user output:
digite o numerodigite o numerodigite o numero6.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:04:36)
-- CODE: 
nota1 = float(input("digite o numero"))
nota2 = float(input("digite o numero"))
nota3 = float(input("digite o numero"))
n1 = nota1*1
n2 = nota2*2
n3 = nota3*3

media = (n1 + n2 + n3) / 6
print(media)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
---- user output:
digite o numerodigite o numerodigite o numero6.5
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
---- user output:
digite o numerodigite o numerodigite o numero8.1
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
---- user output:
digite o numerodigite o numerodigite o numero5.833333333333333
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
---- user output:
digite o numerodigite o numerodigite o numero2.3333333333333335
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
---- user output:
digite o numerodigite o numerodigite o numero8.95
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
---- user output:
digite o numerodigite o numerodigite o numero3.3333333333333335
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:19:31)
-- CODE: 
nota1 = float(input("digite o numero"))
nota2 = float(input("digite o numero"))
nota3 = float(input("digite o numero"))
n1 = nota1*1
n2 = nota2*2
n3 = nota3*3
media = (n1 + n2 + n3) / 3
print(round(media,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
---- user output:
digite o numerodigite o numerodigite o numero13.0
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
---- user output:
digite o numerodigite o numerodigite o numero16.2
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
---- user output:
digite o numerodigite o numerodigite o numero11.67
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
---- user output:
digite o numerodigite o numerodigite o numero4.67
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
---- user output:
digite o numerodigite o numerodigite o numero17.9
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
---- user output:
digite o numerodigite o numerodigite o numero6.67
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:18:27)
-- CODE: 
nota1 = float(input("digite o numero"))
nota2 = float(input("digite o numero"))
nota3 = float(input("digite o numero"))
n1 = nota1*1
n2 = nota2*2
n3 = nota3*3
media = (n1 + n2 + n3) / 3
print(round(media,2))
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
---- user output:
digite o numerodigite o numerodigite o numero13.0
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
---- user output:
digite o numerodigite o numerodigite o numero16.2
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
---- user output:
digite o numerodigite o numerodigite o numero11.67
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
---- user output:
digite o numerodigite o numerodigite o numero4.67
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
---- user output:
digite o numerodigite o numerodigite o numero17.9
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
---- user output:
digite o numerodigite o numerodigite o numero6.67
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 15:04:38)
-- CODE: 
nota1 = float(input("digite o numero"))
nota2 = float(input("digite o numero"))
nota3 = float(input("digite o numero"))
n1 = nota1*1
n2 = nota2*2
n3 = nota3*3

media = (n1 + n2 + n3) / 6
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
---- user output:
digite o numerodigite o numerodigite o numero6.5
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
---- user output:
digite o numerodigite o numerodigite o numero8.1
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
---- user output:
digite o numerodigite o numerodigite o numero5.833333333333333
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
---- user output:
digite o numerodigite o numerodigite o numero2.3333333333333335
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
---- user output:
digite o numerodigite o numerodigite o numero8.95
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
---- user output:
digite o numerodigite o numerodigite o numero3.3333333333333335
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:17:54)
-- CODE: 
nota1 = float(input("digite o numero"))
nota2 = float(input("digite o numero"))
nota3 = float(input("digite o numero"))
n1 = nota1*1
n2 = nota2*2
n3 = nota3*3
media = (n1 + n2 + n3) / 6
print(round(media,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
---- user output:
digite o numerodigite o numerodigite o numero6.5
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
---- user output:
digite o numerodigite o numerodigite o numero8.1
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
---- user output:
digite o numerodigite o numerodigite o numero5.83
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
---- user output:
digite o numerodigite o numerodigite o numero2.33
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
---- user output:
digite o numerodigite o numerodigite o numero8.95
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
---- user output:
digite o numerodigite o numerodigite o numero3.33
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 15:01:53)
-- CODE: 
nota1 = float(input("digite o numero"))
nota2 = float(input("digite o numero"))
nota3 = float(input("digite o numero"))
n1 = nota1*1
n2 = nota2*2
n3 = nota3*3

media = n1 + n2 + n3 / 6
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
---- user output:
digite o numerodigite o numerodigite o numero21.25
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
---- user output:
digite o numerodigite o numerodigite o numero30.349999999999998
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
---- user output:
digite o numerodigite o numerodigite o numero18.75
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
---- user output:
digite o numerodigite o numerodigite o numero6.5
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
---- user output:
digite o numerodigite o numerodigite o numero30.95
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
---- user output:
digite o numerodigite o numerodigite o numero10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 15:12:16)
-- CODE: 
nota1 = float(input("digite o numero"))
nota2 = float(input("digite o numero"))
nota3 = float(input("digite o numero"))
n1 = nota1*1
n2 = nota2*2
n3 = nota3*3
media = (n1 + n2 + n3) / 6
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
---- user output:
digite o numerodigite o numerodigite o numero6.5
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
---- user output:
digite o numerodigite o numerodigite o numero8.1
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
---- user output:
digite o numerodigite o numerodigite o numero5.833333333333333
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
---- user output:
digite o numerodigite o numerodigite o numero2.3333333333333335
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
---- user output:
digite o numerodigite o numerodigite o numero8.95
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
---- user output:
digite o numerodigite o numerodigite o numero3.3333333333333335
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 15:12:19)
-- CODE: 
nota1 = float(input("digite o numero"))
nota2 = float(input("digite o numero"))
nota3 = float(input("digite o numero"))
n1 = nota1*1
n2 = nota2*2
n3 = nota3*3
media = (n1 + n2 + n3) / 6
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
---- user output:
digite o numerodigite o numerodigite o numero6.5
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
---- user output:
digite o numerodigite o numerodigite o numero8.1
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
---- user output:
digite o numerodigite o numerodigite o numero5.833333333333333
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
---- user output:
digite o numerodigite o numerodigite o numero2.3333333333333335
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
---- user output:
digite o numerodigite o numerodigite o numero8.95
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
---- user output:
digite o numerodigite o numerodigite o numero3.3333333333333335
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 15:00:18)
-- CODE: 
nota1 = float(input("digite o numero"))
nota2 = float(input("digite o numero"))
nota3 = float(input("digite o numero"))
media = nota1 + nota2 + notas3 / 3
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = nota1 + nota2 + notas3 / 3
                            ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = nota1 + nota2 + notas3 / 3
                            ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = nota1 + nota2 + notas3 / 3
                            ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = nota1 + nota2 + notas3 / 3
                            ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = nota1 + nota2 + notas3 / 3
                            ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = nota1 + nota2 + notas3 / 3
                            ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 15:14:46)
-- CODE: 
nota1 = float(input("digite o numero"))
nota2 = float(input("digite o numero"))
nota3 = float(input("digite o numero"))
n1 = nota1*1
n2 = nota2*2
n3 = nota3*3
media = (n1 + n2 + n3) / 6
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
---- user output:
digite o numerodigite o numerodigite o numero6.5
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
---- user output:
digite o numerodigite o numerodigite o numero8.1
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
---- user output:
digite o numerodigite o numerodigite o numero5.833333333333333
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
---- user output:
digite o numerodigite o numerodigite o numero2.3333333333333335
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
---- user output:
digite o numerodigite o numerodigite o numero8.95
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
---- user output:
digite o numerodigite o numerodigite o numero3.3333333333333335
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 15:17:39)
-- CODE: 
nota1 = float(input("digite o numero"))
nota2 = float(input("digite o numero"))
nota3 = float(input("digite o numero"))
n1 = nota1*1
n2 = nota2*2
n3 = nota3*3
media = (n1 + n2 + n3) / 6
print(round(media))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
---- user output:
digite o numerodigite o numerodigite o numero6
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
---- user output:
digite o numerodigite o numerodigite o numero8
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
---- user output:
digite o numerodigite o numerodigite o numero6
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
---- user output:
digite o numerodigite o numerodigite o numero2
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
---- user output:
digite o numerodigite o numerodigite o numero9
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
---- user output:
digite o numerodigite o numerodigite o numero3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 15:17:56)
-- CODE: 
nota1 = float(input("digite o numero"))
nota2 = float(input("digite o numero"))
nota3 = float(input("digite o numero"))
n1 = nota1*1
n2 = nota2*2
n3 = nota3*3
media = (n1 + n2 + n3) / 6
print(round(media,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
---- user output:
digite o numerodigite o numerodigite o numero6.5
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
---- user output:
digite o numerodigite o numerodigite o numero8.1
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
---- user output:
digite o numerodigite o numerodigite o numero5.83
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
---- user output:
digite o numerodigite o numerodigite o numero2.33
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
---- user output:
digite o numerodigite o numerodigite o numero8.95
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
---- user output:
digite o numerodigite o numerodigite o numero3.33
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:09:57)
-- CODE: 
nota1 = float(input("digite o numero"))
nota2 = float(input("digite o numero"))
nota3 = float(input("digite o numero"))
n1 = nota1*1
n2 = nota2*2
n3 = nota3*3
media = (n1 + n2 + n3) / 6
print(media)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
---- user output:
digite o numerodigite o numerodigite o numero6.5
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
---- user output:
digite o numerodigite o numerodigite o numero8.1
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
---- user output:
digite o numerodigite o numerodigite o numero5.833333333333333
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
---- user output:
digite o numerodigite o numerodigite o numero2.3333333333333335
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
---- user output:
digite o numerodigite o numerodigite o numero8.95
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
---- user output:
digite o numerodigite o numerodigite o numero3.3333333333333335
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 15:09:58)
-- CODE: 
nota1 = float(input("digite o numero"))
nota2 = float(input("digite o numero"))
nota3 = float(input("digite o numero"))
n1 = nota1*1
n2 = nota2*2
n3 = nota3*3
media = (n1 + n2 + n3) / 6
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
---- user output:
digite o numerodigite o numerodigite o numero6.5
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
---- user output:
digite o numerodigite o numerodigite o numero8.1
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
---- user output:
digite o numerodigite o numerodigite o numero5.833333333333333
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
---- user output:
digite o numerodigite o numerodigite o numero2.3333333333333335
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
---- user output:
digite o numerodigite o numerodigite o numero8.95
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
---- user output:
digite o numerodigite o numerodigite o numero3.3333333333333335
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:03:28)
-- CODE: 
nota1 = float(input("digite o numero"))
nota2 = float(input("digite o numero"))
nota3 = float(input("digite o numero"))
n1 = nota1
n2 = nota2
n3 = nota3

media = n1 + n2 + n3 / 6
print(media)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
---- user output:
digite o numerodigite o numerodigite o numero12.683333333333334
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
---- user output:
digite o numerodigite o numerodigite o numero18.816666666666666
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
---- user output:
digite o numerodigite o numerodigite o numero11.083333333333334
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
---- user output:
digite o numerodigite o numerodigite o numero3.5
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
---- user output:
digite o numerodigite o numerodigite o numero19.716666666666665
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
---- user output:
digite o numerodigite o numerodigite o numero5.666666666666667
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 15:18:28)
-- CODE: 
nota1 = float(input("digite o numero"))
nota2 = float(input("digite o numero"))
nota3 = float(input("digite o numero"))
n1 = nota1*1
n2 = nota2*2
n3 = nota3*3
media = (n1 + n2 + n3) / 3
print(round(media,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
---- user output:
digite o numerodigite o numerodigite o numero13.0
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
---- user output:
digite o numerodigite o numerodigite o numero16.2
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
---- user output:
digite o numerodigite o numerodigite o numero11.67
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
---- user output:
digite o numerodigite o numerodigite o numero4.67
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
---- user output:
digite o numerodigite o numerodigite o numero17.9
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
---- user output:
digite o numerodigite o numerodigite o numero6.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:17:55)
-- CODE: 
nota1 = float(input("digite o numero"))
nota2 = float(input("digite o numero"))
nota3 = float(input("digite o numero"))
n1 = nota1*1
n2 = nota2*2
n3 = nota3*3
media = (n1 + n2 + n3) / 6
print(round(media,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
---- user output:
digite o numerodigite o numerodigite o numero6.5
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
---- user output:
digite o numerodigite o numerodigite o numero8.1
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
---- user output:
digite o numerodigite o numerodigite o numero5.83
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
---- user output:
digite o numerodigite o numerodigite o numero2.33
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
---- user output:
digite o numerodigite o numerodigite o numero8.95
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
---- user output:
digite o numerodigite o numerodigite o numero3.33
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 15:05:24)
-- CODE: 
nota1 = float(input("digite o numero"))
nota2 = float(input("digite o numero"))
nota3 = float(input("digite o numero"))
n1 = nota1*1
n2 = nota2*2
n3 = nota3*3
media = (n1 + n2 + n3) / 6
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
---- user output:
digite o numerodigite o numerodigite o numero6.5
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
---- user output:
digite o numerodigite o numerodigite o numero8.1
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
---- user output:
digite o numerodigite o numerodigite o numero5.833333333333333
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
---- user output:
digite o numerodigite o numerodigite o numero2.3333333333333335
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
---- user output:
digite o numerodigite o numerodigite o numero8.95
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
---- user output:
digite o numerodigite o numerodigite o numero3.3333333333333335
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
